--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section id="contact" class="section">
         <div class="container">
             <h2 class="section-title">Contact Us</h2>
-            <form id="contact-form" action="https://formspree.io/f/mqkrjnkn" method="POST">
+            <form id="contact-form" action="https://formspree.io/f/mbjnbwbd" method="POST">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required />
